# requireit

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE.md  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: requireit.py
tests/: requireit_test.py
